# zombie-crisis

./: .gitignore
godot/: icon.svg.import  project.godot  rust.gdextension  rust.gdextension.uid
godot/TilesetGrass/: map1.png.import  map2.png.import  overworld_tileset_grass.png.import  preview.png.import
godot/addons/godot-rapier2d/: faucet_2d.gd.uid  fluid_2d_circle.gd.uid  fluid_2d_rectangle.gd.uid  fluid_2d_renderer.gd.uid  fluid_2d_shader_renderer.gd.uid  godot-rapier2d.gdextension.uid  rapier_state_2d.gd.uid  water_shader.gdshader.uid
godot/addons/rust/: NodeRustFerris.svg.import  NodeRustLarge.svg.import  NodeRustSmall.svg.import
godot/assets/: Player.png.import
godot/assets/Bullet 24x24 Free Part 3/: Bullet 24x24 Free Part 3A.png.import  Bullet 24x24 Free Part 3B.png.import  Bullet 24x24 Free Part 3C.png.import
godot/assets/Spritesheets/: 001_attack.png.import  001_death.png.import  001_walking.png.import  002_attack.png.import  002_death.png.import  002_walking.png.import  003_attack.png.import  003_death.png.import  003_walking.png.import  004_attack.png.import  004_death.png.import  004_walking.png.import  005_attack.png.import  005_death.png.import  005_walking.png.import  006_attack.png.import  006_death.png.import  006_walking.png.import  007_attack.png.import  007_death.png.import  007_walking.png.import  008_attack.png.import  (+3 more)
godot/scene/: enemy.tscn  global.tscn  main_scene.tscn  player.tscn
godot/tres/: main_scene.tres
rust/: Cargo.toml  build.rs
rust/src/: const_data.rs  enemy.rs  ez.rs  global.rs  lib.rs  main_scene.rs  player.rs
