[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = "0.2.4"
gdext_coroutines = { package = "gdext_coroutines", version = "0.7.1", features = ["async"] }

godot = { version = "0.2.4", features = [
    "experimental-threads", "default", "experimental-godot-api"
] }
smol = "2.0.2"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
gdext-gen = { version = "0.1.0", features = ["find_icons", "dependencies"] }
